tests/e2e/service_event_output_readonly.story
http server
    when server listen path: "/" as req
        req = 2
